--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,10 +11,7 @@
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/GIT/AFCI/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/GIT/AFCI/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
-    </ul>
+    <h3>Mot de Passe généré via service : </h3>
+    <span class="badge alert-info bg-warning p-3">;)</span>
 </div>
 {% endblock %}
